tests/ui_board/snapshots/ui_board__snapshots__limited_color_mode_uses_terminal_palette_styles.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 210
expression: "snapshot(&mut fixture, 48, 8, ThemePreference::Limited)"
---
SIZE 48x8

TEXT
00│⋮ selected prompt│
01││
02││
03││
04││
05│  proqi-ui-contract│
06│  1 thought · edit · saving│
07│  Esc Board│

STYLE RUNS
0: 0-0 fg=Black bg=Green mod=BOLD | 1-47 fg=Reset bg=Reset mod=REVERSED
1: 0-47 fg=Reset bg=Reset mod=NONE
2: 0-47 fg=Reset bg=Reset mod=NONE
3: 0-47 fg=Reset bg=Reset mod=NONE
4: 0-47 fg=Reset bg=Reset mod=NONE
5: 0-47 fg=Reset bg=Reset mod=NONE
6: 0-1 fg=Reset bg=Reset mod=NONE | 2-45 fg=DarkGray bg=Reset mod=NONE | 46-47 fg=Reset bg=Reset mod=NONE
7: 0-1 fg=Reset bg=Reset mod=NONE | 2-4 fg=Green bg=Reset mod=NONE | 5-47 fg=Reset bg=Reset mod=NONE
