tests/ui_board/snapshots/ui_board__snapshots__long_paste_stays_folded_and_accented_in_edit_mode.snap
---
source: tests/ui_board/snapshots.rs
expression: "snapshot(&mut fixture, 72, 9, ThemePreference::Dark)"
---
SIZE 72x9

TEXT
00│  proqi · proqi-ui-contract · 1 thought│
01│⋮ [Pasted text · 84 lines · 1,763 characters]│
02││
03││
04││
05││
06││
07│                                                         edit · saving│
08│  Esc Board  y Copy  x Cut  u Undo  : Commands  ? Shortcuts│

STYLE RUNS
0: 0-71 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(232, 228, 223) bg=Rgb(91, 158, 125) mod=BOLD | 1-1 fg=Rgb(232, 228, 223) bg=Rgb(52, 52, 63) mod=NONE | 2-44 fg=Rgb(91, 158, 125) bg=Rgb(52, 52, 63) mod=BOLD | 45-45 fg=Rgb(232, 228, 223) bg=Rgb(91, 158, 125) mod=NONE | 46-71 fg=Rgb(232, 228, 223) bg=Rgb(52, 52, 63) mod=NONE
2: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-69 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 70-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-4 fg=Rgb(91, 158, 125) bg=Rgb(15, 13, 10) mod=NONE | 5-12 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 13-13 fg=Rgb(91, 158, 125) bg=Rgb(15, 13, 10) mod=NONE | 14-20 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 21-21 fg=Rgb(91, 158, 125) bg=Rgb(15, 13, 10) mod=NONE | 22-27 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 28-28 fg=Rgb(91, 158, 125) bg=Rgb(15, 13, 10) mod=NONE | 29-35 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 36-36 fg=Rgb(91, 158, 125) bg=Rgb(15, 13, 10) mod=NONE | 37-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 48-48 fg=Rgb(91, 158, 125) bg=Rgb(15, 13, 10) mod=NONE | 49-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
